--- a/vit_medsegm.ipynb
+++ b/vit_medsegm.ipynb
@@ -928,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "sota_table",
       "metadata": {},
       "outputs": [
@@ -957,15 +957,7 @@
         "print(\"MODEL COMPARISON (Synapse Dataset, A100 GPU)\")\n",
         "print(\"=\"*80)\n",
         "print(f\"{'Model':<20} {'Params (M)':<12} {'Dice':<8} {'Latency (ms)':<15} {'VRAM (GB)':<10}\")\n",
-        "print(\"-\"*80)\n",
-        "\n",
-        "# Your model\n",
-        "print(f\"{'Your ViT-Light':<20} {results['params_m']:<12.2f} {'0.905':<8} {results['latency_ms']:<15.2f} {results['vram_gb']:<10.2f}\")\n",
-        "print(f\"{'UNETR':<20} {'92.0':<12} {'0.936':<8} {'70.0':<15} {'6.4':<10}\")\n",
-        "print(f\"{'Swin-UNETR':<20} {'62.0':<12} {'0.933':<8} {'56.0':<15} {'5.1':<10}\")\n",
-        "print(f\"{'DAINet':<20} {'31.0':<12} {'0.929':<8} {'31.0':<15} {'3.8':<10}\")\n",
-        "print(\"=\"*80)\n",
-        "print(f\"\\n✓ Your model is {70/results['latency_ms']:.1f}x faster than UNETR with only 3% lower Dice!\")"
+        "print(\"-\"*80)"
       ]
     },
     {
