feat: Add CSV logging for training metrics, increase training epochs, and introduce a technical documentation notebook.

--- a/TransUNet_Pipeline.ipynb
+++ b/TransUNet_Pipeline.ipynb
@@ -25,7 +25,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -65,7 +65,7 @@
                 "IMG_SIZE = 224\n",
                 "BATCH_SIZE = 24\n",
                 "BASE_LR = 0.01\n",
-                "EPOCHS = 150\n",
+                "EPOCHS = 300\n",
                 "SEED = 42\n",
                 "\n",
                 "if not os.path.exists(MODEL_SAVE_DIR):\n",
@@ -186,7 +186,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -467,10 +467,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
+                "import csv\n",
+                "import os\n",
+                "\n",
                 "def train_model():\n",
                 "    # Data\n",
                 "    train_dataset = SynapseDataset(OUTPUT_DIR, split=\"train\")\n",
@@ -490,6 +493,12 @@
                 "    criterion = DiceCELoss(num_classes=NUM_CLASSES)\n",
                 "    \n",
                 "    best_dice = 0.0\n",
+                "    \n",
+                "    # Setup logging\n",
+                "    log_file = os.path.join(MODEL_SAVE_DIR, \"training_log.csv\")\n",
+                "    with open(log_file, mode='w', newline='') as f:\n",
+                "        writer = csv.writer(f)\n",
+                "        writer.writerow(['Epoch', 'Train Loss', 'Val Dice', 'Best Dice'])\n",
                 "    \n",
                 "    print(\"Starting Training...\")\n",
                 "    for epoch in range(EPOCHS):\n",
@@ -519,13 +528,20 @@
                 "                metrics = compute_metrics(outputs, labels, num_classes=NUM_CLASSES)\n",
                 "                val_dice += metrics['Dice']\n",
                 "        \n",
-                "        val_dice /= len(val_loader)\n",
-                "        print(f\"Epoch {epoch+1}: Train Loss: {train_loss/len(train_loader):.4f}, Val Dice: {val_dice:.4f}\")\n",
+                "        avg_train_loss = train_loss / len(train_loader)\n",
+                "        avg_val_dice = val_dice / len(val_loader)\n",
                 "        \n",
-                "        if val_dice > best_dice:\n",
-                "            best_dice = val_dice\n",
+                "        print(f\"Epoch {epoch+1}: Train Loss: {avg_train_loss:.4f}, Val Dice: {avg_val_dice:.4f}\")\n",
+                "        \n",
+                "        if avg_val_dice > best_dice:\n",
+                "            best_dice = avg_val_dice\n",
                 "            torch.save(model.state_dict(), os.path.join(MODEL_SAVE_DIR, \"best_model.pth\"))\n",
                 "            print(\"Saved best model.\")\n",
+                "            \n",
+                "        # Log to CSV\n",
+                "        with open(log_file, mode='a', newline='') as f:\n",
+                "            writer = csv.writer(f)\n",
+                "            writer.writerow([epoch + 1, avg_train_loss, avg_val_dice, best_dice])\n",
                 "\n",
                 "# Uncomment to run training\n",
                 "# train_model()"
